# momentum-trading

./: .gitignore  README.md  pyproject.toml
config/: 4h_swing.yaml  default.yaml
momentum_trading/: __init__.py  main.py
momentum_trading/core/: __init__.py  config.py  scheduler.py
momentum_trading/data/: __init__.py  loader.py
momentum_trading/execution/: __init__.py  orders.py  router.py
momentum_trading/monitoring/: __init__.py  kill_switch.py  metrics.py
momentum_trading/risk/: __init__.py  engine.py
momentum_trading/signals/: __init__.py  engine.py
momentum_trading/utils/: __init__.py  math_helpers.py  precision.py  state_store.py
